adding products data

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -8,7 +8,38 @@
 		<App id="app">
 			<pages>
 				<Page id="page" title="{i18n>title}">
-					<content />
+					<Table id="idProductsTable"
+						   items="{products>/value}"
+						   class="sapUiResponsiveContentPadding">
+						<columns>
+							<Column>
+								<Text text="{i18n>productName}"/>
+							</Column>
+							<Column>
+								<Text text="{i18n>productQuantity}"/>
+							</Column>
+							<Column>
+								<Text text="{i18n>productBranch}"/>
+							</Column>
+							<Column>
+								<Text text="{i18n>productUnit}"/>
+							</Column>
+							<Column>
+								<Text text="{i18n>productCaducity}"/>
+							</Column>
+						</columns>
+						<items>
+							<ColumnListItem>
+								<cells>
+									<Text text="{products>name}"/>
+									<Text text="{products>quantity}"/>
+									<Text text="{products>branch}"/>
+									<Text text="{products>units}"/>
+									<Text text="{products>caducity}"/>
+								</cells>
+							</ColumnListItem>
+						</items>
+					</Table>
 				</Page>
 			</pages>
 		</App>
