--- a/webapp/view/Home.view.xml
+++ b/webapp/view/Home.view.xml
@@ -6,7 +6,7 @@
 >
 
   <App>
-    <Page title="{i18n>title}">
+    <Page id="homeView" title="{i18n>title}">
       <content>
         <VBox fitContainer="true" justifyContent="Center" alignItems="Center" alignContent="Center">
           <items>
