--- a/webapp/view/ProductDetail.view.xml
+++ b/webapp/view/ProductDetail.view.xml
@@ -14,6 +14,7 @@
 		<App>
 			<Page id="detailView" title="{i18n>title}">
 				<content>
+				<core:Icon src="sap-icon://home" press="navToHome" size="2rem"/>
 					<ObjectHeader
 						title="{productDetail>/name}"
 						icon="{productDetail>/image}" 
@@ -175,7 +176,7 @@
 					        	</IconTabFilter>
 				        	</items>
 			        	</IconTabBar>
-						<tnt:SideNavigation id="sideNavigation" expanded="false">
+						<!--<tnt:SideNavigation id="sideNavigation" expanded="false">
 							<tnt:NavigationList>
 								<tnt:NavigationListItem icon="sap-icon://home" select="navToHome"/>
 							</tnt:NavigationList>
@@ -184,7 +185,7 @@
 									<tnt:NavigationListItem icon="sap-icon://settings" select="navToSettings"/>
 								</tnt:NavigationList>
 							</tnt:fixedItem>
-						</tnt:SideNavigation>
+						</tnt:SideNavigation>-->
 					</HBox>
 				</content>
 				<footer>
